CodeJB/log/err_2.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
In file included from input_line_11:6:
././data.cc:158:9: error: no member named 'DisableThreadSafety' in namespace 'ROOT'
  ROOT::DisableThreadSafety();
  ~~~~~~^
Error in <ACLiC>: Dictionary generation failed!
